--- a/index.html
+++ b/index.html
@@ -11,6 +11,43 @@
 <body>
 
     <div class="container">
+        <!-- Row 1 -->
+        <div class="row">
+            <div class="col-1">
+            </div>
+            <div class="col-1">
+            </div>
+            <div class="col-1">
+            </div>
+            <div class="col-1">
+            </div>
+            <div class="col-1">
+            </div>
+            <div class="col-1">
+            </div>
+            <div class="col-1">
+            </div>
+            <div class="col-1">
+            </div>
+            <div class="col-1">
+            </div>
+            <div class="col-1">
+            </div>
+            <div class="col-1">
+            </div>
+            <div class="col-1">
+            </div>
+        </div>
+
+        <!-- Row 2 -->
+        <div class="row">
+            <div class="col-2">
+            </div>
+            <div class="col-5">
+            </div>
+            <div class="col-5">
+            </div>
+        </div>
 
     </div>
     
