--- a/index.html
+++ b/index.html
@@ -14,38 +14,92 @@
         <!-- Row 1 -->
         <div class="row">
             <div class="col-1">
+                col-1
             </div>
             <div class="col-1">
+                col-1
             </div>
             <div class="col-1">
+                col-1
             </div>
             <div class="col-1">
+                col-1
             </div>
             <div class="col-1">
+                col-1
             </div>
             <div class="col-1">
+                col-1
             </div>
             <div class="col-1">
+                col-1
             </div>
             <div class="col-1">
+                col-1
             </div>
             <div class="col-1">
+                col-1
             </div>
             <div class="col-1">
+                col-1
             </div>
             <div class="col-1">
+                col-1
             </div>
             <div class="col-1">
+                col-1
             </div>
         </div>
 
         <!-- Row 2 -->
         <div class="row">
             <div class="col-2">
+                col
             </div>
             <div class="col-5">
+                col
             </div>
             <div class="col-5">
+                col
+            </div>
+        </div>
+
+        <!-- Row 3 -->
+        <div class="row">
+            <div class="col-12">
+                12col
+            </div>
+        </div>
+
+        <!-- Row 4 -->
+        <div class="row">
+            <div class="col-8">
+                8col
+            </div>
+            <div class="col-2">
+                2col
+            </div>
+            <div class="col-2">
+                2col
+            </div>
+        </div>
+
+        <!-- Row 5 -->
+        <div class="row">
+            <div class="col-1">
+                1col
+            </div>
+            <div class="col-2">
+                2col
+            </div>
+            <div class="col-2">
+                2col
+            </div>
+            <div class="col-6">
+                6col
+            </div>
+            <div class="col-1">
+                1col
             </div>
         </div>
 
