--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- Container 1 -->
 
-    <div class="container">
+    <div class="container first-container">
         <!-- Row 1 -->
         <div class="row">
             <div class="col-1">
@@ -416,7 +416,7 @@
         <h3>Space Around</h3>
 
         <div class="row">
-            <div class="col-12 justify-around ">
+            <div class="col-12 d.flex justify-around ">
                 <div class="col-3 nested">
 
                 </div>
@@ -436,7 +436,7 @@
         <h3>Space between</h3>
 
         <div class="row">
-            <div class="col-12 justify-between ">
+            <div class="col-12 d.flex justify-between ">
                 <div class="col-3 nested">
 
                 </div>
